[gd_scene load_steps=13 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://O.png" type="Texture" id=2]
[ext_resource path="res://X.png" type="Texture" id=3]
[ext_resource path="res://oWinsLabel.gd" type="Script" id=4]
[ext_resource path="res://Area2D.gd" type="Script" id=5]
[ext_resource path="res://xWinsLabel.gd" type="Script" id=6]
[ext_resource path="res://WinScreen.gd" type="Script" id=7]
[ext_resource path="res://WinScreenOverlay.png" type="Texture" id=8]
[ext_resource path="res://drawsLabel.gd" type="Script" id=9]
[ext_resource path="res://resetButton.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 504, 328 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 91.5101, 38.7348 )
points = PoolVector2Array( 360, 64, 360, 512 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 228.081, 38.7348 )
points = PoolVector2Array( 360, 64, 360, 512 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 854.362, -10.3877 )
rotation = 1.5708
scale = Vector2( 1, 1.15905 )
points = PoolVector2Array( 272, 96, 272, 480 )

[node name="Line2D4" type="Line2D" parent="."]
position = Vector2( 695.843, 84.3 )
rotation = 1.5708
points = PoolVector2Array( 310.925, -48.5851, 310.925, 399.415 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 384, 192 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 520, 192 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D2"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D2"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 656, 192 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D3"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D3"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2( 384, 328 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D4"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D4"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D5" type="Area2D" parent="."]
position = Vector2( 520, 328 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D5"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D5"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D6" type="Area2D" parent="."]
position = Vector2( 656, 328 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D6"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D6"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D7" type="Area2D" parent="."]
position = Vector2( 384, 464 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D7"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D7"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D7"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D8" type="Area2D" parent="."]
position = Vector2( 520, 464 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D8"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D8"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D8"]
visible = false
texture = ExtResource( 3 )

[node name="Area2D9" type="Area2D" parent="."]
position = Vector2( 656, 464 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D9"]
shape = SubResource( 1 )

[node name="O" type="Sprite" parent="Area2D9"]
visible = false
texture = ExtResource( 2 )

[node name="X" type="Sprite" parent="Area2D9"]
visible = false
texture = ExtResource( 3 )

[node name="oWinsLabel" type="Label" parent="."]
margin_left = 320.0
margin_top = 64.0
margin_right = 376.0
margin_bottom = 80.0
text = "O Wins: "
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xWinsLabel" type="Label" parent="."]
margin_left = 320.0
margin_top = 40.0
margin_right = 376.0
margin_bottom = 56.0
text = "X Wins: "
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turnLabel" type="Label" parent="."]
margin_left = 496.0
margin_top = 24.0
margin_right = 540.0
margin_bottom = 38.0
text = "Turn: X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drawsLabel" type="Label" parent="."]
margin_left = 320.0
margin_top = 88.0
margin_right = 376.0
margin_bottom = 104.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen" type="Area2D" parent="."]
visible = false
position = Vector2( 520, 328 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinScreen"]
z_index = 1
shape = SubResource( 2 )

[node name="winner" type="Label" parent="WinScreen"]
margin_left = -88.0
margin_top = -280.0
margin_right = 88.0
margin_bottom = -266.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgain" type="Label" parent="WinScreen"]
margin_left = -88.0
margin_top = -264.0
margin_right = 91.0
margin_bottom = -250.0
text = "Click anywhere to play again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="WinScreen"]
position = Vector2( -8.00003, 3.05176e-05 )
scale = Vector2( 10.24, 6.56 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 100 )

[node name="CanvasLayer" type="CanvasLayer" parent="WinScreen"]

[node name="resetButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 28.0
text = "Reset"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="resetButton" to="resetButton" method="_on_resetButton_pressed"]
